--- a/style/style.css
+++ b/style/style.css
@@ -113,10 +113,93 @@ font-weight: 800;
     /* font-family: Lato; */
     /* font-style: normal; */
 }  
+.banner-img-nd{
+    width: 318px;
+    height: 420px;
+    flex-shrink: 0;
+    padding: 100px 442px 100px 0px;
+}
 .btn-nd{
     margin-left: 450px;
     padding: 10px 20px;
     background-color: rgb(199, 30, 30);
     color: white;
+}
+.last-one{
+    padding:100px 250px 150px 20px ;
+    background-image: url(../image/Rectangle\ 9.png);
+    background-repeat: no-repeat;
+    width: 1922px;
+    height: 449px;
+    /* flex-shrink: 0; */
+    margin: 100px 256px;
+    text-align: center;
+    background-position: center;
+
+}
+.last-one-title{
+    color: #272727;
+    /* text-align: center; */
+    font-family: Lato;
+    font-size: 40px;
+    /* font-style: normal; */
+    font-weight: 800;
+    /* line-height: normal; */
+}
+.loseb{
+    display: inline;
+    border: none;
+    
+}.email{
+    padding: 15px 25px;
+    color: rgba(39, 39, 39, 0.60);
+text-align: center;
+font-family: Lato;
+font-size: 18px;
+/* font-style: normal; */
+font-weight: 400;
+line-height: 30px;
+}
+.btn-nd-l-one{
+    padding: 15px 5px;
+    background-color:rgb(199, 30, 30);
+    color: white;
+}
+/* foot  */
+.foot{
+    background-color: black;
+    text-align: center;
+    width: 1922px;
+    height: 449px;
+    flex-shrink: 0;
+} 
+.foot-title{
+    padding: 128px 830px 10px 832px;
+    color: #E55473;
+    font-family: Lato;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+.foot-descreption{
+    padding: 20px 650px;
+    color: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}.foot-descreption-s{
+    
+    padding: 20px 128px 783px ;
+    color: rgba(255, 255, 255, 0.40);
+    text-align: center;
+    font-family: Lato;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }   
         
