--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0px;
+    padding-top:  30px;
+    width:auto;
+    ;
+    
+}
 .banner-container{
    
     display: flex;
@@ -125,8 +132,40 @@ font-weight: 800;
     background-color: rgb(199, 30, 30);
     color: white;
 }
+.containet-img{
+    width: 150px;
+    padding: 100px250px;
+    /* margin: 100px 100px ; */
+    display: flex;
+    flex-direction: row;
+    /* justify-content:center; */
+}
+.box{
+    padding:50px 50PX;
+    gap: 10px;
+    width: 650px;
+    height: auto;
+    margin: 0 10px;
+    box-shadow: 0 0 20px rebeccapurple;
+    transition: 1s;
+    margin-left: 20px;
+    
+}
+.box img{
+    display:flex;
+    /* width: 100px; */
+    border-radius: 5px;
+    
+
+}.box:hover{
+    transform: scale(1.3);
+    z-index: 2;
+}
 .last-one{
-    padding:100px 250px 150px 20px ;
+    width: 1440px;
+    height: 449px;
+    flex-shrink: 0;
+    /* padding:100px 250px 150px 20px ; */
     background-image: url(../image/Rectangle\ 9.png);
     background-repeat: no-repeat;
     width: 1922px;
@@ -134,7 +173,7 @@ font-weight: 800;
     /* flex-shrink: 0; */
     margin: 100px 256px;
     text-align: center;
-    background-position: center;
+    /* background-position: center; */
 
 }
 .last-one-title{
