--- a/style/style.css
+++ b/style/style.css
@@ -94,7 +94,7 @@ font-size: 18px;
 }
 .extra{
     display: flex;
-    width: 1440px;/
+    width: 1440px;
     height: 320px;
     flex-shrink: 0;
     align-items:center;
@@ -128,12 +128,12 @@ padding-: 0px 5px 0px 5px;
 }
 .banner-container-nd{
     width: 1922px;
-    border: 2px solid red;
+    border: 2px solid;
     height: 620px;
     flex-shrink: 0;
     border-radius: 8px;
-    background-color: rgba(229, 84, 115, 0.05);
     display: flex;
+    background-color:rgb(233, 222, 201);
 }
 .title-nd{
     padding: 155px 0px 10px 250px;
@@ -251,14 +251,11 @@ padding-: 0px 5px 0px 5px;
     font-weight: 400;
     line-height: 30px;
 }.foot-descreption-s{
-    
-    padding: 20px 128px 783px ;
-    color: rgba(255, 255, 255, 0.40);
+    margin-bottom: 50px;
+    padding: 10px 0px 30px 0px ;
+    color: rgb(142, 119, 119);
     text-align: center;
     font-family: Lato;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+    font-size: 22px;
 }   
         
